--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: 1003;
+        z-index: 10000;
         background: #000000;
         overflow: hidden;
       }
@@ -91,22 +91,28 @@
 
       .processing {
         position: absolute;
-        color: white;
+        color: white !important;
         top: 50%;
         left: 50%;
-        margin-left: -114px;
-        margin-top: -34px;
-        font-size: 45px;
+        margin-left: -211px;
+        margin-top: -54px;
+        font-size: 40px !important;
+        text-align: center;
+        font-weight: normal !important;
+        font-family: Arial, Helvetica, sans-serif !important;
       }
     </style>
-    <div id="nb-global-spinner" class="spinner">
+    <div id="botpanic_spinner" class="spinner">
       <div class="blob blob-0"></div>
       <div class="blob blob-1"></div>
       <div class="blob blob-2"></div>
       <div class="blob blob-3"></div>
       <div class="blob blob-4"></div>
       <div class="blob blob-5"></div>
-      <h1 class="processing">Processing</h1>
+      <h1 class="processing">
+        Processing
+        <br />Bot(P)anic data sources
+      </h1>
     </div>
   </body>
 </html>
